fix recording visible under overlay

--- a/www/less/main/pages/content-blackboard.less
+++ b/www/less/main/pages/content-blackboard.less
@@ -17,6 +17,10 @@ body.course-page .course-header.course-blackboard .course-header-content {
 		border-top: 1px solid #333333;
 	}
 
+	.canvas-hidden {
+		visibility: hidden;
+	}
+
 	.recorder-controls {
 		text-align: center;
 		height: 900px;
